# brunch-installer

./: BUILD_INSTRUCTIONS.md  README.md  index.html  package.json  vite.config.js
.github/workflows/: build.yml
src/: app.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: grub.rs  installer.rs  lib.rs  main.rs  windows_utils.rs
